@@ -1,3 +1,8 @@
+2015-07-22  Per Bothner  <per@bothner.com>
+
+	* ConsumerTarget.java (compileFromStack): Better handling of
+	unsigned integer types.
+
 2015-07-17  Per Bothner  <per@bothner.com>
 
 	Use an explicit flag to mark a LetExp created for a <body>.
